fix: :art: fix white bar overflow

--- a/style/theme.css
+++ b/style/theme.css
@@ -89,6 +89,7 @@ html {
 html, body, #__next {
     margin: 0;
     height: 100%;
+    overflow: hidden;
 }
 
 * {
